# Monocular-depth-estimation

./: README.md  Trainer_distilation.py  eval_utils.py  layers.py  train.py  train_controlled_diffusion.py  train_distillation_original.py
Python/: Train_distillation_new.py  Trainer.py  collections.py  data_loaders.py  options.py  train.py
Python/networks/: depth_decoder_2.py  depth_decoder_control.py  refinement_modules.py  resnet_encoder_pre.py  resnet_encoder_torch.py
cpp/: .gitignore  CMakeLists.txt  data_loaders.cpp  data_loaders.hpp  dd.py  main.cpp  main_trainer.cpp  main_trainer.hpp  run.sh
cpp/networks/: resnet_encoder_pre.cpp  resnet_encoder_pre.hpp
cpp/networks_jit_saves/: resnet_backbone_jit.py
networks/: NewCRF_encoder.py  __init__.py  depth_decoder.py  depth_decoder_attention.py  pose_decoder.py  resnet_encoder.py  resnet_encoder_pre.py  resnet_encoder_sep.py  resnet_encoder_teacher.py  spm.py  vit_decoder.py
